--- a/Server/templates/index_new.html
+++ b/Server/templates/index_new.html
@@ -36,7 +36,7 @@
   <body>
     
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">TCC Suelem</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">TCC Suelem & Daiane</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,28 +47,30 @@
   </div>
 </header>
 
-<div class="container-fluid">
+<div class="container-fluid" tabindex="0">
   <div class="row">
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="position-sticky pt-3">
-        <ul class="nav flex-column">
+        <ul id="navigationBar" class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="home"></span>
-              Gráficos Sensores
+            <a class="nav-link active" aria-current="page" href="#graficos">
+              <span data-feather="monitor"></span>
+              Gráficos
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file"></span>
+            <a class="nav-link active" aria-current="page" href="#sensores">
+              <span data-feather="monitor"></span>
+              Sensores
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#atuadores">
+              <span data-feather="hard-drive"></span>
               Atuadores
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers"></span>
-              Integrations
-            </a>
           </li>
         </ul>
 
@@ -80,18 +82,17 @@
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Current month
+            <span>Bootstrap:</span>
+            <a href="https://getbootstrap.com/">https://getbootstrap.com/</a><hr/>
             </a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" data-bs-spy="scroll" data-bs-target="#navigationBar" data-bs-offset="0" tabindex="0">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dados dos Sensores em Tempo Real</h1>
+        <h1 class="h2" id="graficos">Dados dos Sensores em Tempo Real</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -105,51 +106,75 @@
       </div>
 
       <div class="my-4 w-100" id="myChartT" width="900" height="380"></div>
+      <div class="my-4 w-100" id="myChartU" width="900" height="380"></div>
       <div class="my-4 w-100" id="myChartP" width="900" height="380"></div>
       <div class="my-4 w-100" id="myChartL" width="900" height="380"></div>
       
-
-
-      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Dados dos Sensores</h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-              <span data-feather="calendar"></span>
-              This week
-            </button>
-          </div>
-        </div>
-
         <div id="chart_div" style="width: 400px; height: 120px;"></div>
 
-
-
-
-      <h2>Sensores do Sistema</h2>
+      <h2 id="sensores">Sensores do Sistema</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
             <tr>
               <th scope="col">Sensor</th>
               <th scope="col">Dados</th>
+              <th scope="col">Data/Hora</th>
               <th scope="col">Fabricante</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>BMP280</td>
-              <td>random</td>
-              <td>Bosh</td>
+              <td>BMP280 Temperatura</td>
+              <td id="BMPTempLabel">--</td>
+              <td id="dataLabel">--</td>
+              <td>Bosch</td>
             </tr>
             <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
+              <td>BMP280 Pressão</td>
+              <td id="BMPPressLabel">--</td>
+              <td id="dataLabel2">--</td>
+              <td>Bosch</td>
+            </tr>
+            <tr>
+              <td>DHT11 Temperatura</td>
+              <td id="DHT11TempLabel">--</td>
+              <td id="dataLabel4">--</td>
+              <td>Aosong Electronics LTDA </td>
+            </tr>
+
+            <tr>
+              <td>DHT11 Umidade</td>
+              <td id="DHT11UmiLabel">--</td>
+              <td id="dataLabel1">--</td>
+              <td>Aosong Electronics LTDA </td>
+            </tr>
+
+            <tr>
+              <td>PCF8591</td>
+              <td id="lightLabel">--</td>
+              <td id="dataLabel3">--</td>
+              <td>NXP Semiconductors</td>
             </tr>
           </tbody>
         </table>
       </div>
+
+      <h2 id="atuadores">Atuadores</h2>
+      <div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-header">
+            CARGA
+          </div>
+            <div style = 'margin: 24px;'>
+              <button id="btnEnableActuator" type="button" class="btn btn-success" onclick="setActuator(true)">Ligar</button>
+              <button id="btnDisableActuator" type="button" class="btn btn-outline-danger" onclick="setActuator(false)">Desligar</button>
+            </div>
+            
+        </div>
+
+      </div>
+
     </main>
   </div>
 </div>
